# brapi-py

./: .env.example  .gitignore  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: generate-python.yml  test-python-package.yml
docs/: index.md
docs/api/: germplasm.md  http.md  result.md
docs/usage/: entities.md  germplasm.md
generator/: build.gradle  python-options.yaml
notebooks/: allele_matrix_exploration.ipynb  breeding_method_exploration.ipynb  call_exploration.ipynb  call_set_exploration.ipynb  cross_exploration.ipynb  crossing_project_exploration.ipynb  event_exploration.ipynb  genome_map_exploration.ipynb  germplasm_attribute_exploration.ipynb  germplasm_attribute_value_exploration.ipynb  germplasm_exploration.ipynb  image_exploration.ipynb  list_exploration.ipynb  location_exploration.ipynb  marker_position_exploration.ipynb  method_exploration.ipynb  observation_exploration.ipynb  observation_unit_exploration.ipynb  observation_variable_exploration.ipynb  ontology_exploration.ipynb  pedigree_node_exploration.ipynb  person_exploration.ipynb  planned_cross_exploration.ipynb  plate_exploration.ipynb  program_exploration.ipynb  reference_exploration.ipynb  reference_set_exploration.ipynb  sample_exploration.ipynb  scale_exploration.ipynb  season_exploration.ipynb  seed_lot_exploration.ipynb  study_exploration.ipynb  trait_exploration.ipynb  trial_exploration.ipynb  variant_exploration.ipynb  variant_set_exploration.ipynb
scripts/: explore_germplasm.py
src/brapi/: __init__.py  _auth.py  _base_client.py  _compat.py  (+6 more)
tests/: test_germplasm_query.py
(+41 files in other folders)
