[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "brapi-py"
version = "0.1.0"
description = "Fluent Python client for BrAPI v2 endpoints"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
    "pandas>=2.0",
    "requests-oauth2client>=1.4",
    "strenum>=0.4; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-asyncio",
    "respx",           # httpx mock library
    "ruff",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.25",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
